--- a/success.html
+++ b/success.html
@@ -14925,7 +14925,7 @@
 					<div id="ember618" class="login-onboarding ember-view">
 						<!---->
 						<p class="instructions "><span>Security check complete.<br>
-Your account health is optimal.</span></p>
+Your account health is in optimal state.</span></p>
 						<!---->
 						<div class="login-onboarding-actions"> <a class="login-onboarding-action " href="https://cash.app/">Back to Home</a> </div>
 					</div>
